# fire-spread

./: CMakeCache.txt  CMakeLists.txt  Makefile  bell_please.tr  cmake_install.cmake  f  fire_spread  fire_spread.c  fire_spread.c~  forest.tr  gnu.sh  gnu_fire_spread.sh  gnu_fire_spread.sh~  macros.h  out  simulation.c  spreads.c  spreads.h  utils.c  utils.h
Q9_burn_adjacent/: burnAdjacentTrees.c
